# huffman-cli-actual

./: CMakeLists.txt  README.md  compressed.huf
include/: huffman.h
src/: huffman.cpp  main.cpp
